--- a/admin/view/template/setting/setting.twig
+++ b/admin/view/template/setting/setting.twig
@@ -614,6 +614,26 @@
                       {% endif %} </label>
                   </div>
                 </div>
+                <div class="form-group">
+                  <label class="col-sm-2 control-label">{{ entry_show_options_price }}</label>
+                  <div class="col-sm-10">
+                    <label class="radio-inline">
+                      {% if config_show_options_price %}
+                      <input type="radio" name="config_show_options_price" value="1" checked="checked" />
+                      {{ text_yes }}
+                      {% else %}
+                      <input type="radio" name="config_show_options_price" value="1" />
+                      {{ text_yes }}
+                      {% endif %} </label>
+                    <label class="radio-inline"> {% if not config_show_options_price %}
+                      <input type="radio" name="config_show_options_price" value="0" checked="checked" />
+                      {{ text_no }}
+                      {% else %}
+                      <input type="radio" name="config_show_options_price" value="0" />
+                      {{ text_no }}
+                      {% endif %} </label>
+                  </div>
+                </div>
               </fieldset>
               <fieldset>
                 <legend>{{ text_review }}</legend>
